--- a/src/package.json
+++ b/src/package.json
@@ -10,5 +10,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^7.1.10"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1"
   }
 }
