--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
     "electron": "^7.1.10"
   },
   "dependencies": {
+    "@babel/standalone": "^7.8.6",
     "@fortawesome/fontawesome-free": "^5.12.1"
   }
 }
