--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.8.6",
-    "@fortawesome/fontawesome-free": "^5.12.1"
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "jquery": "^3.4.1"
   }
 }
