--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/standalone": "^7.8.6",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "electron-reload": "^1.5.0",
     "jquery": "^3.4.1"
   }
 }
