--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,18 @@
 {
   "name": "homework_reminder",
+  "description": "an app",
   "version": "0.1.0",
   "main": "./main.js",
   "scripts": {
     "start": "electron ."
+    
   },
   "author": "",
   "license": "MIT",
-  "description": "",
+  
   "devDependencies": {
-    "electron": "^7.1.10"
+    "electron": "^7.1.10",
+    "electron-installer-windows": "^3.0.0"
   },
   "dependencies": {
     "@babel/standalone": "^7.8.6",
